# igeScene

./: .gitignore  CMakeLists.txt  Component.cpp  Component.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  build.py  conanfile.py  setup.py
Components/: CameraComponent.cpp  CameraComponent.h  Canvas.cpp  Canvas.h  Component.cpp  Component.h  EditableFigureComponent.cpp  EditableFigureComponent.h  EnvironmentComponent.cpp  EnvironmentComponent.h  FigureComponent.cpp  FigureComponent.h  RectTransform.cpp  RectTransform.h  ScriptComponent.cpp  ScriptComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
Components/gui/: Canvas.cpp  Canvas.h  RectTransform.cpp  RectTransform.h  UIImage.cpp  UIImage.h  UIText.cpp  UIText.h  UITextField.h
Components/physic/: PhysicBase.cpp  PhysicBase.h  PhysicBox.cpp  PhysicBox.h  PhysicCapsule.cpp  PhysicCapsule.h  PhysicSphere.cpp  PhysicSphere.h
audio/: AudioManager.cpp  AudioManager.h
components/: AmbientLight.cpp  BoneTransform.cpp  BoneTransform.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  CompoundComponent.cpp  CompoundComponent.h  DirectionalLight.cpp  EditableFigureComponent.cpp  EditableFigureComponent.h  EnvironmentComponent.cpp  EnvironmentComponent.h  FigureComponent.cpp  FigureComponent.h  IgeComponent.h  LightComponent.cpp  LightComponent.h  PointLight.cpp  PointLight.h  RuntimeComponent.cpp  RuntimeComponent.h  ScriptComponent.cpp  ScriptComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextBitmapComponent.cpp  TextBitmapComponent.h  TextComponent.cpp  TextComponent.h  TransformComponent.cpp  TransformComponent.h  igeCreatorUtils.h
components/animation/: AnimationClip.cpp  AnimationClip.h  AnimatorComponent.cpp  AnimatorComponent.h  AnimatorCondition.cpp  AnimatorCondition.h  AnimatorController.cpp  AnimatorController.h  AnimatorState.cpp  AnimatorState.h  AnimatorStateMachine.cpp  AnimatorStateMachine.h  AnimatorTransition copy.cpp  AnimatorTransition copy.h  AnimatorTransition.cpp  AnimatorTransition.h
components/audio/: AudioListener.cpp  AudioListener.h  AudioManager.cpp  AudioManager.h  AudioSource.cpp  AudioSource.h
components/gui/: Canvas.cpp  Canvas.h  RectTransform.cpp  RectTransform.h  RectTransformUtility.cpp  RectTransformUtility.h  UIButton.cpp  UIButton.h  UIImage.cpp  UIImage.h  UIMask.cpp  UIMask.h  UIMaskable.cpp  UIScrollBar.cpp  UIScrollBar.h  UIScrollView.cpp  UIScrollView.h  UISlider.cpp  UISlider.h  UIText.cpp  UIText.h  UITextBitmap.cpp  UITextBitmap.h  UITextField.cpp  UITextField.h
components/light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
components/navigation/: DynamicNavMesh.cpp  DynamicNavMesh.h  NavAgent.cpp  NavAgent.h  NavAgentManager.cpp  NavAgentManager.h  NavArea.cpp  NavArea.h  NavMesh.cpp  NavMesh.h  NavObstacle.cpp  NavObstacle.h  Navigable.cpp  Navigable.h  OffMeshLink.cpp  OffMeshLink.h
components/particle/: Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h
components/physic/: BoxCollider.cpp  BoxCollider.h  BulletDebugRender.cpp  BulletDebugRender.h  CapsuleCollider.cpp  Collider.cpp  Collider.h  Dof6SpringConstraint.cpp  Dof6SpringConstraint.h  FixedConstraint.cpp  FixedConstraint.h  HingeConstraint.cpp  HingeConstraint.h  MeshCollider.cpp  MeshCollider.h  PhysicBase.cpp  PhysicBase.h  PhysicBox.cpp  PhysicBox.h  PhysicCapsule.cpp  PhysicCapsule.h  PhysicConstraint.cpp  PhysicConstraint.h  PhysicManager.cpp  PhysicManager.h  PhysicMesh.cpp  PhysicMesh.h  PhysicObject.cpp  PhysicObject.h  PhysicSoftBody.cpp  PhysicSoftBody.h  PhysicSphere.cpp  PhysicSphere.h  Rigidbody.cpp  Rigidbody.h  SliderConstraint.cpp  SliderConstraint.h  Softbody.cpp  Softbody.h  SphereCollider.cpp  (+3 more)
components/tween/: Tween.cpp  Tween.h  TweenPropType.cpp  TweenPropType.h  Tweener.cpp
core/: BitmapFont.cpp  BitmapFont.h  BitmapFontHelper.cpp  BitmapFontHelper.h  Macros.h  MemBuffer.cpp  MemBuffer.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Value.cpp  igeSceneMacros.h
event/: Event.h  EventContext.cpp  EventContext.h  EventImpl.hpp  InputEvent.cpp  InputEvent.h  InputProcessor.cpp  InputProcessor.h
html/: igeScene.html
physic/: PhysicManager.cpp  PhysicManager.h
python/: igeScene.cpp  igeScene.h  pyAmbientLight.cpp  pyAmbientLight.h  pyAnimator.cpp  pyAnimator.h  pyAnimator_doc_en.h  pyAudioListener.cpp  pyAudioListener.h  pyAudioManager.cpp  pyAudioManager.h  pyAudioSource.cpp  pyAudioSource.h  pyAudioSource_doc_en.h  pyBoxCollider.cpp  pyBoxCollider.h  pyCameraComponent.cpp  pyCameraComponent.h  pyCameraComponent_doc_en.h  pyCanvas.cpp  pyCanvas.h  pyCapsuleCollider.cpp  pyCapsuleCollider.h  pyComponent.cpp  pyComponent.h  pyComponent_doc_en.h  pyDirectionalLight.cpp  pyDirectionalLight.h  pyDof6Constraint.cpp  pyDof6Constraint.h  pyDynamicNavMesh.cpp  pyDynamicNavMesh.h  pyEditableFigureComponent.cpp  pyEditableFigureComponent.h  pyEditableFigureComponent_doc_en.h  pyEnvironmentComponent.cpp  pyEnvironmentComponent.h  pyEnvironmentComponent_doc_en.h  pyFigureComponent.cpp  pyFigureComponent.h  (+111 more)
scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  TargetObject.cpp  TargetObject.h
scripts/: build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat  build.bat  deploy.bat  deploy.sh
src/components/: Component.cpp  EditableFigureComponent.cpp  FigureComponent.cpp  FigureComponent.h  RuntimeComponent.cpp  RuntimeComponent.h  ScriptComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  TransformComponent.cpp  igeCreatorUtils.cpp
src/core/: BitmapFont.cpp  BitmapFontHelper.cpp  BitmapFontHelper.h
src/event/: InputEvent.cpp  InputEventContext.cpp
src/python/: igeScene.h  pyAnimator.h  (+67 more)
utils/: GraphicsHelper.cpp  GraphicsHelper.h  PhysicHelper.cpp  PhysicHelper.h  PyxieHeaders.h  RayOBBChecker.cpp  RayOBBChecker.h  Serialize.h  ShapeDrawer.cpp  ShapeDrawer.h  Singleton.h  pythonExtension.c  pythonExtension.h
(+161 files in other folders)
